--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -36,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
-    <TextView
+    <org.sufficientlysecure.htmltextview.HtmlTextView
         android:id="@+id/contentText"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -47,5 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/authortext" />
+        app:layout_constraintTop_toBottomOf="@+id/authortext"
+        android:textAppearance="@android:style/TextAppearance.Small" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
