nyolcadik kommit cikkek betöltve, megjelenítve, kép is van, szerző is van létrehozva a tabok

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,16 +12,16 @@
         tools:layout="@layout/fragment_home"/>
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.kateproject.kateapp.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_filter"
+        android:name="com.kateproject.kateapp.ui.filter.FilterFragment"
+        android:label="@string/menu_filter"
+        tools:layout="@layout/fragment_filter" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.kateproject.kateapp.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_archive"
+        android:name="com.kateproject.kateapp.ui.archive.ArchiveFragment"
+        android:label="@string/menu_archive"
+        tools:layout="@layout/fragment_archive" />
 
     <fragment
         android:id="@+id/nav_tools"
@@ -29,15 +29,4 @@
         android:label="@string/menu_tools"
         tools:layout="@layout/fragment_tools" />
 
-    <fragment
-        android:id="@+id/nav_share"
-        android:name="com.kateproject.kateapp.ui.share.ShareFragment"
-        android:label="@string/menu_share"
-        tools:layout="@layout/fragment_share" />
-
-    <fragment
-        android:id="@+id/nav_send"
-        android:name="com.kateproject.kateapp.ui.send.SendFragment"
-        android:label="@string/menu_send"
-        tools:layout="@layout/fragment_send" />
 </navigation>
