tizenkettedik kommit cikkek betöltve, megjelenítve, kép formázva, szerző is van létrehozva a tabok beállítások menü kb. berendezve, kb csinál dolgokat szűrő kb kész archívum kérdéses

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -22,8 +22,9 @@
         android:id="@+id/checkBoxArticle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Cikk"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_filter" />
 
@@ -31,8 +32,10 @@
         android:id="@+id/checkBoxInterview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Interjú"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxArticle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
