--- a/app/src/main/res/layout/row_layout1.xml
+++ b/app/src/main/res/layout/row_layout1.xml
@@ -19,8 +19,8 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/backgorundImage"
         app:layout_constraintStart_toStartOf="@+id/backgorundImage"
