--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -54,11 +54,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:isScrollContainer="true"
         android:text="Content"
+        android:textAlignment="textStart"
+        android:textAppearance="@android:style/TextAppearance.Small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/authortext"
-        android:textAppearance="@android:style/TextAppearance.Small" />
+        app:layout_constraintTop_toBottomOf="@+id/authortext" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
