18ik kommit/4 cikkek betöltve, megjelenítve, kép formázva, szerző is van létrehozva a tabok beállítások menü kb. berendezve, kb csinál dolgokat szűrő kész archívum kérdéses jobban próbálkozik a cikkek betöltésével tud értesítést küldeni küld értesítéseket az új cikkekről, ha van net, talán már nem bugos elmenti a beállításokat elmenti a cikkeket, visszatöltésnél betölti őket url-ként betölti az archívumot töltőképernyő!!!!

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="ArticleTheme" parent="AppTheme">
+        <item name="android:homeAsUpIndicator">@drawable/back_button_image</item>
+    </style>
+
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
