19ik kommit cikkek betöltve, megjelenítve, kép formázva, szerző is van létrehozva a tabok beállítások menü kb. berendezve, kb csinál dolgokat szűrő kész archívum kérdéses jobban próbálkozik a cikkek betöltésével tud értesítést küldeni küld értesítéseket az új cikkekről, ha van net, talán már nem bugos elmenti a beállításokat elmenti a cikkeket, visszatöltésnél betölti őket url-ként betölti az archívumot töltőképernyő stílusok vannak, de nem lehet váltani

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/colorBackgroundFloating">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/article_rec_view"
@@ -17,10 +18,10 @@
 
     <SearchView
         android:id="@+id/searchBar"
-        android:queryHint="keresés a címben"
         android:layout_width="0dp"
         android:layout_height="46dp"
-        android:background="#CECECE"
+        android:background="?attr/colorAccent"
+        android:queryHint="keresés a címben"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
