--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,10 @@
         android:label="@string/menu_settings"
         tools:layout="@layout/fragment_settings" />
 
+    <fragment
+        android:id="@+id/nav_styles"
+        android:name="com.kateproject.kateapp.ui.styles.StylesFragment"
+        android:label="@string/menu_styles"
+        tools:layout="@layout/fragment_style" />
+
 </navigation>
