19ik kommit/2 cikkek betöltve, megjelenítve, kép formázva, szerző is van létrehozva a tabok beállítások menü kb. berendezve, kb csinál dolgokat szűrő kész archívum kérdéses jobban próbálkozik a cikkek betöltésével tud értesítést küldeni küld értesítéseket az új cikkekről, ha van net, talán már nem bugos elmenti a beállításokat elmenti a cikkeket, visszatöltésnél betölti őket url-ként betölti az archívumot töltőképernyő stílusok vannak, de nem lehet váltani

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
         android:background="?attr/colorBackgroundFloating"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:itemIconTint="?android:attr/textColorSecondary"
-        app:itemTextColor="?android:attr/textColorSecondary"
+        app:itemIconTint="?android:attr/textColorPrimary"
+        app:itemTextColor="?android:attr/textColorPrimary"
         app:menu="@menu/activity_main_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
