--- a/app/src/main/res/layout/fragment_style.xml
+++ b/app/src/main/res/layout/fragment_style.xml
@@ -23,7 +23,7 @@
 
             <RadioButton
                 android:id="@+id/defaultStyle"
-                android:layout_width="90dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -66,6 +66,17 @@
                 app:srcCompat="@color/ColorPrimaryDark" />
 
             <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@color/colorPrimaryLight" />
+
+            <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -85,7 +96,7 @@
 
             <RadioButton
                 android:id="@+id/nightStyle"
-                android:layout_width="90dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -128,6 +139,17 @@
                 app:srcCompat="@color/ColorPrimaryDark2" />
 
             <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@color/colorPrimaryLight2" />
+
+            <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -146,7 +168,7 @@
 
             <RadioButton
                 android:id="@+id/neptunStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -154,6 +176,61 @@
                 android:layout_weight="1"
                 android:text="Neptun"
                 android:textColor="?android:attr/textColorSecondary" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@color/ColorAccent3" />
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@color/ColorPrimary3" />
+
+            <ImageView
+                android:id="@+id/imageView15"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@color/ColorPrimaryDark3" />
+
+            <ImageView
+                android:id="@+id/imageView16"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@color/colorPrimaryLight3" />
+
+            <ImageView
+                android:id="@+id/imageView17"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@color/backgroundColor3" />
         </LinearLayout>
 
         <LinearLayout
