--- a/app/src/main/res/layout/row_layout1.xml
+++ b/app/src/main/res/layout/row_layout1.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="173dp"
     android:elevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/round_outline"
-        android:backgroundTint="@color/ColorPrimary"
+        android:backgroundTint="?attr/colorControlHighlight"
         android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,12 +24,14 @@
         <TextView
             android:id="@+id/textViewExc"
             android:layout_width="0dp"
-            android:layout_height="80dp"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="28dp"
             android:text="Excerpt"
-            android:textColor="?android:attr/textColor"
+            android:textColor="?android:attr/textColorSecondary"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/backgroundColor" />
@@ -37,13 +39,13 @@
         <TextView
             android:id="@+id/textViewDate"
             android:layout_width="0dp"
-            android:layout_height="19dp"
+            android:layout_height="20dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:text="Date"
             android:textAlignment="viewEnd"
-            android:textColor="?android:attr/textColor"
+            android:textColor="?android:attr/textColorSecondary"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textViewAut"
@@ -52,14 +54,12 @@
         <TextView
             android:id="@+id/textViewAut"
             android:layout_width="176dp"
-            android:layout_height="19dp"
+            android:layout_height="20dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="4dp"
             android:text="Author"
-            android:textColor="?android:attr/textColor"
+            android:textColor="?android:attr/textColorSecondary"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewExc" />
 
@@ -67,6 +67,8 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="32dp"
             android:text="TextView"
             android:textAlignment="textStart"
             android:textStyle="italic"
