--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,28 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--alapstilus szinek-->
-    <color name="ColorAccent">#005349</color> <!-- főszín -->
-    <color name="ColorPrimary">#02021B</color> <!-- főszín 2 -->
-    <color name="ColorPrimaryDark">#000000</color> <!-- az értesítési sáv színe -->
-    <color name="textLight">#D3D3FF</color> <!-- világos szöveg -->
-    <color name="textDark">#001B5E</color> <!-- világosabb sötét szöveg -->
-    <color name="textDarkSecondary">#000036</color> <!-- sötét szöveg -->
-    <color name="backgroundColor">#FFFDF8</color> <!-- háttérszín -->
+    <color name="ColorAccent">#406C88</color> <!-- főszín -->
+    <color name="ColorPrimary">#97952B</color> <!-- főszín 2 -->
+    <color name="colorPrimaryLight">#BCC4D3</color> <!-- világos főszín -->
+    <color name="ColorPrimaryDark">#00030F</color> <!-- az értesítési sáv színe -->
+    <color name="textLight">#FBFFD9</color> <!-- világos szöveg -->
+    <color name="textDark">#002F7E</color> <!-- világosabb sötét szöveg -->
+    <color name="textDarkSecondary">#0D1613</color> <!-- sötét szöveg -->
+    <color name="backgroundColor">#F4FBFD</color> <!-- háttérszín -->
 
     <!--darkmode szinek-->
-    <color name="ColorAccent2">#1C2C97</color> <!-- főszín -->
+    <color name="ColorAccent2">#609400</color> <!-- főszín -->
     <color name="ColorPrimary2">#000000</color> <!-- főszín 2 -->
+    <color name="colorPrimaryLight2">#223029</color> <!-- világos főszín -->
     <color name="ColorPrimaryDark2">#000000</color> <!-- az értesítési sáv színe -->
     <color name="textLight2">#D3D3FF</color> <!-- világos szöveg -->
     <color name="textDark2">#EDF3FF</color> <!-- világosabb sötét szöveg -->
     <color name="textDarkSecondary2">#D5D5FF</color> <!-- sötét szöveg -->
     <color name="backgroundColor2">#111416</color> <!-- háttérszín -->
 
+    <!--zölt stilus szinek-->
+    <color name="ColorAccent3">#007C6E</color> <!-- főszín -->
+    <color name="ColorPrimary3">#003128</color> <!-- főszín 2 -->
+    <color name="colorPrimaryLight3">#98B8A6</color> <!-- világos főszín -->
+    <color name="ColorPrimaryDark3">#000F07</color> <!-- az értesítési sáv színe -->
+    <color name="textLight3">#D3D3FF</color> <!-- világos szöveg -->
+    <color name="textDark3">#003C23</color> <!-- világosabb sötét szöveg -->
+    <color name="textDarkSecondary3">#00361A</color> <!-- sötét szöveg -->
+    <color name="backgroundColor3">#FFFDF8</color> <!-- háttérszín -->
+
     <!--cikktipus szinek-->
     <color name="ColorDefault">#616161</color>
-    <color name="ColorHir">#3D4BE2</color>
-    <color name="ColorInterju">#AA753D</color>
-    <color name="ColorKultura">#D10000</color>
-    <color name="ColorProgram">#8A8500</color>
-    <color name="ColorElet">#8600FF</color>
+    <color name="ColorHir">#404BAC</color>
+    <color name="ColorInterju">#AA783B</color>
+    <color name="ColorKultura">#AD3F3F</color>
+    <color name="ColorProgram">#BBB548</color>
+    <color name="ColorElet">#6D4A97</color>
 </resources>
